force-app/main/default/objects/CBK_DataManager__c/CBK_DataManager__c.object-meta.xml
<CustomObject>
    <label>Data Manager</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>