force-app/main/default/objects/CBK_DataManager__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Nombre API del metadato</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicar el nombre API del metadato</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>