force-app/main/default/objects/CBK_DataManager__c/fields/Check_By_OT__c.field-meta.xml
<CustomField>
    <fullName>Check_By_OT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este valor será true para aquellos objetos auditar.</description>
    <label>Check By OT</label>
    <type>Checkbox</type>
</CustomField>