force-app/main/default/objects/CBK_DataManager__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Number</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Master-Detail Relationship</fullName>
            </value>
            <value>
                <fullName>External Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Geolocation</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Text Area (Long)</fullName>
            </value>
            <value>
                <fullName>Text Area (Rich)</fullName>
            </value>
            <value>
                <fullName>Text (Encrypted)</fullName>
            </value>
            <value>
                <fullName>TIme</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>Record Type</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Roll-Up Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>