force-app/main/default/objects/CBK_DataManager__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>