force-app/main/default/objects/CBK_DataManager__c/fields/FK_PK__c.field-meta.xml
<CustomField>
    <fullName>FK_PK__c</fullName>
    <label>FK/PK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FK</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>