force-app/main/default/objects/CBK_DataManager__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CBK_DataManager__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Object</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CBK_DataManager__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Data_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>