force-app/main/default/objects/CBK_DataManager__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>