force-app/main/default/objects/CBK_DataManager__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>