force-app/main/default/objects/CBK_DataManager__c/fields/RecordTypes__c.field-meta.xml
<CustomField>
    <fullName>RecordTypes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecordTypes</label>
    <referenceTo>CBK_DataManager__c</referenceTo>
    <relationshipLabel>Recordtypes</relationshipLabel>
    <relationshipName>Data_Manager2</relationshipName>
    <type>Lookup</type>
</CustomField>