force-app/main/default/objects/CBK_DataManager__c/fields/Related_Fields__c.field-meta.xml
<CustomField>
    <fullName>Related_Fields__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fields</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CBK_DataManager__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Field</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CBK_DataManager__c</referenceTo>
    <relationshipLabel>Data Manager (Related Fields)</relationshipLabel>
    <relationshipName>Data_Manager1</relationshipName>
    <type>Lookup</type>
</CustomField>