force-app/main/default/objects/CBK_DataManager__c/recordTypes/CBK_Traspaso.recordType-meta.xml
<RecordType>
    <fullName>CBK_Traspaso</fullName>
    <active>true</active>
    <description>RT para el traspaso de funcionalidad al nuevo sistema de data manager</description>
    <label>Traspaso</label>
</RecordType>