force-app/main/default/objects/CBK_DataManager__c/recordTypes/Field.recordType-meta.xml
<RecordType>
    <fullName>Field</fullName>
    <active>true</active>
    <label>Field</label>
</RecordType>