force-app/main/default/objects/CBK_DataManager__c/recordTypes/Ip.recordType-meta.xml
<RecordType>
    <fullName>Ip</fullName>
    <active>true</active>
    <label>Ip</label>
</RecordType>