force-app/main/default/objects/CBK_DataManager__c/recordTypes/Object.recordType-meta.xml
<RecordType>
    <fullName>Object</fullName>
    <active>true</active>
    <label>Object</label>
</RecordType>