force-app/main/default/objects/CBK_DataManager__c/recordTypes/Profile.recordType-meta.xml
<RecordType>
    <fullName>Profile</fullName>
    <active>true</active>
    <label>Profile</label>
</RecordType>