force-app/main/default/objects/CBK_DataManager__c/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>true</active>
    <label>RecordType</label>
</RecordType>