force-app/main/default/objects/CBK_DataManager__c/validationRules/CBK_Descripcion_Vacia.validationRule-meta.xml
<ValidationRule>
    <fullName>CBK_Descripcion_Vacia</fullName>
    <active>true</active>
    <description>Los nuevos registros deben contar con una descripción.</description>
    <errorConditionFormula>AND(ISNEW() , OR(ISBLANK( Description__c ),ISNULL(Description__c))
,RecordType.DeveloperName = &quot;CBK_Traspaso&quot;
,!$Permission.CBK_BypassValidationRules)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Se debe indicar una descripción</errorMessage>
</ValidationRule>