force-app/main/default/objects/CBK_DataManager__c/listViews/CSBD_Fields.listView-meta.xml
<ListView>
    <fullName>CSBD_Fields</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Proyectos__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyectos__c</field>
        <operation>includes</operation>
        <value>CSBD</value>
    </filters>
    <label>CSBD: Fields</label>
</ListView>