force-app/main/default/objects/CBK_DataManager__c/listViews/Denegados.listView-meta.xml
<ListView>
    <fullName>Denegados</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Proyectos__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CBK_DataManager__c.Field</value>
    </filters>
    <label>Fields Denegados</label>
</ListView>