force-app/main/default/objects/CBK_DataManager__c/listViews/FieldsRecords.listView-meta.xml
<ListView>
    <fullName>FieldsRecords</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Proyectos__c</columns>
    <columns>Status__c</columns>
    <columns>Field_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CBK_DataManager__c.Field</value>
    </filters>
    <label>Fields</label>
</ListView>