force-app/main/default/objects/CBK_DataManager__c/listViews/Objects_Pendientes.listView-meta.xml
<ListView>
    <fullName>Objects_Pendientes</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Proyectos__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CBK_DataManager__c.Object</value>
    </filters>
    <label>Objects Pendientes</label>
</ListView>