force-app/main/default/objects/CBK_DataManager__c/listViews/Profiles.listView-meta.xml
<ListView>
    <fullName>Profiles</fullName>
    <columns>NAME</columns>
    <columns>ProfileName__c</columns>
    <columns>Proyectos__c</columns>
    <columns>Status__c</columns>
    <columns>Check_By_OT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CBK_DataManager__c.Profile</value>
    </filters>
    <label>Profiles</label>
</ListView>