force-app/main/default/objects/CBK_DataManager__c/listViews/Validados.listView-meta.xml
<ListView>
    <fullName>Validados</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Proyectos__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CBK_DataManager__c.Field</value>
    </filters>
    <label>Fields Validados</label>
</ListView>